--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter'
 
-    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+//    runtimeOnly 'com.h2database:h2'
 
 
     runtimeOnly 'org.postgresql:postgresql'
@@ -34,6 +35,7 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
 
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
