--- a/build.gradle
+++ b/build.gradle
@@ -28,16 +28,24 @@ dependencies {
 
 //    runtimeOnly 'com.h2database:h2'
 
+    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
     runtimeOnly 'org.postgresql:postgresql'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
+    compileOnly 'org.projectlombok:lombok'
 
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.testcontainers:postgresql'
+
+
 }
 
 tasks.named('test') {
