Implementação de metricas com Spring Boot Actuator

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics
+
 
 security:
   token:
     secret: erickWck_!@#
     candidate: erickWck
+
