--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,10 @@ configurations {
 }
 
 repositories {
+    maven { url 'https://repo.spring.io/snapshot' }
     mavenCentral()
 }
+
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -36,6 +38,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'io.micrometer:micrometer-registry-prometheus-simpleclient'
 
 
     runtimeOnly 'org.postgresql:postgresql'
