--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,18 @@ spring:
       ddl-auto: update
 management:
   endpoints:
+    enabled-by-default: false
     web:
       exposure:
-        include: health, metrics
+        include: health,metrics,prometheus
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
 
 
 security:
