--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,31 @@
 version: '3.9'
+
 services:
   postgres:
     container_name: 'gestao_vagas'
     image: postgres
     ports:
-      - 5432:5432
+      - "5432:5432"
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=user123
       - POSTGRES_DB=gestao_vagas
+  prometheus:
+    container_name: 'prometheus'
+    image: prom/prometheus:latest
+    volumes:
+      - ../config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    networks:
+      - gv-network
+    ports:
+      - "9090:9090"
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+networks:
+  gv-network:
+    driver: bridge
+
+volumes:
+  prometheus_data:
