--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,6 +22,15 @@ services:
       - "9090:9090"
     extra_hosts:
       -  "host.docker.internal:host-gateway"
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    networks:
+      - gv-network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   gv-network:
